Build: Add springdoc 의존성

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
     implementation 'org.mindrot:jbcrypt:0.4'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
